--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "practse1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://leelu3333.github.io/practicecopy",
+  "homepage": "https://Leelu3333.github.io/practicecopy",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
